--- a/css/main.css
+++ b/css/main.css
@@ -29,12 +29,7 @@ Grey dark 3: #999
   -webkit-box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
           box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   min-height: 30rem;
-}
-
-.header {
-  height: 5rem;
-  background-color: white;
-  border-bottom: 1px solid var(--dui-base-mute);
+  border-radius: var(--dui-border-radius);
 }
 
 .content {
@@ -55,5 +50,87 @@ Grey dark 3: #999
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 5rem;
+  background-color: white;
+  border-bottom: 1px solid var(--dui-base-mute);
+}
+
+.logo {
+  height: 2.5rem;
+  margin-left: 2rem;
+}
+
+.input-wrapper {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40%;
+          flex: 0 0 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.input-wrapper .input__field {
+  color: var(--dui-base);
+  background-color: RGB(var(--dui-scheme));
+  border-radius: calc(var(--dui-border-radius) * 2);
+  border: none;
+  padding: 0.3rem 1rem;
+  width: 90%;
+  height: 2.5rem;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  margin-right: -2.5rem;
+}
+
+.input-wrapper .input__field:focus {
+  outline: none;
+  width: 100%;
+}
+
+.input-wrapper .input__field::-webkit-input-placeholder {
+  color: var(--dui-base-mute);
+}
+
+.input-wrapper .input__btn {
+  border: none;
+  background-color: transparent;
+}
+
+.input-wrapper .input__btn:active {
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.input-wrapper .input__icon {
+  width: 1.5rem;
+  height: 2.5rem;
+  fill: var(--dui-base-mute);
+}
+
+.user-nav {
+  background-color: aqua;
+}
+
+.user-nav svg {
+  width: 1.2rem;
+  height: 1.2rem;
 }
 /*# sourceMappingURL=main.css.map */
