--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ Grey dark 3: #999
 .content-container {
   max-width: 70rem;
   margin: 8rem auto;
-  background-color: RGB(var(--dui-scheme));
+  background-color: RGB(var(--dui-scheme-rgb));
   -webkit-box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
           box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   min-height: 30rem;
@@ -89,7 +89,7 @@ Grey dark 3: #999
 
 .input-wrapper .input__field {
   color: var(--dui-base);
-  background-color: RGB(var(--dui-scheme));
+  background-color: RGB(var(--dui-scheme-rgb));
   border-radius: calc(var(--dui-border-radius) * 2);
   border: none;
   padding: 0.3rem 1rem;
@@ -126,11 +126,66 @@ Grey dark 3: #999
 }
 
 .user-nav {
-  background-color: aqua;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
 }
 
-.user-nav svg {
+.user-nav > * {
+  height: 100%;
+  padding: 0 1rem;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.user-nav > *:hover {
+  background-color: RGB(var(--dui-scheme-rgb));
+}
+
+.user-nav__icon-box {
+  position: relative;
+}
+
+.user-nav__icon {
   width: 1.2rem;
   height: 1.2rem;
+  fill: var(--dui-base-mute);
+}
+
+.user-nav__notification {
+  font-size: 0.7rem;
+  width: 1.1rem;
+  height: 1.1rem;
+  border-radius: 50%;
+  background-color: RGB(var(--dui-primary-rgb));
+  color: var(--dui-primary-invert);
+  position: absolute;
+  top: 1.1rem;
+  right: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.user-nav__user-photo {
+  height: 2.5rem;
+  border-radius: 50%;
+  margin-right: 1.2rem;
 }
 /*# sourceMappingURL=main.css.map */
