--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,7 +26,7 @@ Grey dark 3: #999
 .content-container {
         max-width: 70rem;
         margin: 8rem auto; // center ver & hor
-        background-color: RGB(var(--dui-scheme));
+        background-color: RGB(var(--dui-scheme-rgb));
         box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
         min-height: 30rem;
         border-radius: var(--dui-border-radius);
@@ -71,7 +71,7 @@ Grey dark 3: #999
         .input {
                 &__field {
                         color: var(--dui-base);
-                        background-color: RGB(var(--dui-scheme));
+                        background-color: RGB(var(--dui-scheme-rgb));
                         border-radius: calc(var(--dui-border-radius) * 2);
                         border: none;
                         padding: 0.3rem 1rem;
@@ -104,9 +104,47 @@ Grey dark 3: #999
 }
 
 .user-nav {
-        background-color: aqua;
-        svg {
+        display: flex;
+        align-items: center;
+        align-self: stretch;
+
+        & > * {
+                height: 100%;
+                padding: 0 1rem;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                &:hover {
+                        background-color: RGB(var(--dui-scheme-rgb));
+                }
+        }
+
+        &__icon-box {
+                position: relative;
+        }
+        &__icon {
                 width: 1.2rem;
                 height: 1.2rem;
+                fill: var(--dui-base-mute);
+        }
+        &__notification {
+                font-size: 0.7rem;
+                width: 1.1rem;
+                height: 1.1rem;
+                border-radius: 50%;
+                background-color: RGB(var(--dui-primary-rgb));
+                color: var(--dui-primary-invert);
+                position: absolute;
+                top: 1.1rem;
+                right: 0.5rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+        }
+
+        &__user-photo {
+                height: 2.5rem;
+                border-radius: 50%;
+                margin-right: 1.2rem;
         }
 }
