--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,18 @@
-/*
-COLORS
-
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
-
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
+/*-------------------------
+      BASE MIXINS 
+      Common mixins used for other mixins
+-------------------------*/
+/*-------------------------
+      LAYOUT MIXINS
+      For centering,...
+-------------------------*/
+/*-------------------------
+      PSEUDO  MIXINS 
+     To append additional effect w/o extra div
+-------------------------*/
 .custom-bg::before {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(var(--dui-primary-lighten-3)), to(var(--dui-primary-darken-3)));
-  background-image: linear-gradient(to right bottom, var(--dui-primary-lighten-3), var(--dui-primary-darken-3));
+  background-image: -webkit-gradient(linear, left top, right bottom, from(hsl(var(--dui-color-primary-h), var(--dui-color-primary-s), calc(var(--dui-color-primary-l) + 15%))), to(hsl(var(--dui-color-primary-h), var(--dui-color-primary-s), calc(var(--dui-color-primary-l) + -15%))));
+  background-image: linear-gradient(to right bottom, hsl(var(--dui-color-primary-h), var(--dui-color-primary-s), calc(var(--dui-color-primary-l) + 15%)), hsl(var(--dui-color-primary-h), var(--dui-color-primary-s), calc(var(--dui-color-primary-l) + -15%)));
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -25,33 +20,15 @@ Grey dark 3: #999
 .content-container {
   max-width: 70rem;
   margin: 8rem auto;
-  background-color: RGB(var(--dui-scheme-rgb));
   -webkit-box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
           box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   min-height: 30rem;
   border-radius: var(--dui-border-radius);
 }
 
-.content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.sidebar {
-  background-color: var(--dui-base-mute);
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 18%;
-          flex: 0 0 18%;
-}
-
-.hotel-view {
-  background-color: white;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-
+/*-------------------------
+      HEADER
+-------------------------*/
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -63,8 +40,7 @@ Grey dark 3: #999
       -ms-flex-align: center;
           align-items: center;
   height: 5rem;
-  background-color: white;
-  border-bottom: 1px solid var(--dui-base-mute);
+  background-color: var(--dui-color-primary-contrast);
 }
 
 .logo {
@@ -88,8 +64,8 @@ Grey dark 3: #999
 }
 
 .input-wrapper .input__field {
-  color: var(--dui-base);
-  background-color: RGB(var(--dui-scheme-rgb));
+  color: var(--dui-color-scheme-contrast);
+  background-color: var(--dui-color-scheme);
   border-radius: calc(var(--dui-border-radius) * 2);
   border: none;
   padding: 0.3rem 1rem;
@@ -106,7 +82,7 @@ Grey dark 3: #999
 }
 
 .input-wrapper .input__field::-webkit-input-placeholder {
-  color: var(--dui-base-mute);
+  color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 40 + 40% + var(--dui-color-scheme-contrast-l))));
 }
 
 .input-wrapper .input__btn {
@@ -122,7 +98,7 @@ Grey dark 3: #999
 .input-wrapper .input__icon {
   width: 1.5rem;
   height: 2.5rem;
-  fill: var(--dui-base-mute);
+  fill: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 20 + 20% + var(--dui-color-scheme-contrast-l))));
 }
 
 .user-nav {
@@ -149,7 +125,7 @@ Grey dark 3: #999
 }
 
 .user-nav > *:hover {
-  background-color: RGB(var(--dui-scheme-rgb));
+  background-color: var(--dui-color-scheme);
 }
 
 .user-nav__icon-box {
@@ -159,7 +135,7 @@ Grey dark 3: #999
 .user-nav__icon {
   width: 1.2rem;
   height: 1.2rem;
-  fill: var(--dui-base-mute);
+  fill: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 30 + 30% + var(--dui-color-scheme-contrast-l))));
 }
 
 .user-nav__notification {
@@ -167,8 +143,8 @@ Grey dark 3: #999
   width: 1.1rem;
   height: 1.1rem;
   border-radius: 50%;
-  background-color: RGB(var(--dui-primary-rgb));
-  color: var(--dui-primary-invert);
+  background-color: var(--dui-color-primary);
+  color: var(--dui-color-primary-contrast);
   position: absolute;
   top: 1.1rem;
   right: 0.5rem;
@@ -187,5 +163,112 @@ Grey dark 3: #999
   height: 2.5rem;
   border-radius: 50%;
   margin-right: 1.2rem;
+}
+
+/*-------------------------
+      SIDEBAR
+-------------------------*/
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+
+.sidebar {
+  background-color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 15 + 15% + var(--dui-color-scheme-contrast-l))));
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 18%;
+          flex: 0 0 18%;
+  height: 50rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 2rem;
+}
+
+.side-nav {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.side-nav__icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: currentColor;
+  margin-right: 1rem;
+}
+
+.side-nav__link:link, .side-nav__link:visited {
+  text-transform: uppercase;
+  color: var(--dui-color-scheme);
+  -webkit-transition: color 1s;
+  transition: color 1s;
+  display: block;
+  padding: 1rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 10;
+  position: relative;
+}
+
+.side-nav__link:hover {
+  color: var(--dui-color-primary-contrast);
+}
+
+.side-nav__item {
+  position: relative;
+}
+
+.side-nav__item:not(:last-child) {
+  margin-bottom: 0.3rem;
+}
+
+.side-nav__item::before {
+  -webkit-transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, -webkit-transform 0.2s;
+  transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, -webkit-transform 0.2s;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, -webkit-transform 0.2s;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 5px;
+  background-color: var(--dui-color-primary);
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+}
+
+.side-nav__item:hover::before {
+  width: 100%;
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+}
+
+.legal {
+  color: var(--dui-color-scheme);
+  text-align: center;
+  font-size: 1rem;
+}
+
+.hotel-view {
+  background-color: var(--dui-color-scheme);
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 /*# sourceMappingURL=main.css.map */
