--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,24 +1,17 @@
-/*
-COLORS
+@import "../../../dui/scss/abstracts/mixins";
+@import "../../../dui/scss/abstracts/functions";
 
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
-
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
+$color-primary: var(--dui-color-primary);
+// prettier-ignore
+// $scheme-distinct: lightness(--dui-color-scheme, var(--flat-scheme-distinct-intensity));
+$color-header: var(--dui-color-primary-contrast);
+$color-search-box: var(--dui-color-scheme);
 
 .custom-bg::before {
+        $color-primary-light-3: lightness(--dui-color-primary, 15%);
+        $color-primary-dark-3: lightness(--dui-color-primary, -15%);
         // prettier-ignore
-        background-image: linear-gradient(to right bottom, var(--dui-primary-lighten-3), var(--dui-primary-darken-3));
+        background-image: linear-gradient(to right bottom, $color-primary-light-3, $color-primary-dark-3);
         background-size: cover;
         background-repeat: no-repeat;
 }
@@ -26,35 +19,21 @@ Grey dark 3: #999
 .content-container {
         max-width: 70rem;
         margin: 8rem auto; // center ver & hor
-        background-color: RGB(var(--dui-scheme-rgb));
+        // background-color: $scheme;
         box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
         min-height: 30rem;
         border-radius: var(--dui-border-radius);
 }
 
-.content {
-        display: flex;
-}
-
-.sidebar {
-        background-color: var(--dui-base-mute);
-        flex: 0 0 18%;
-}
-
-.hotel-view {
-        background-color: white;
-        flex-grow: 1;
-}
-
-///////////////////////////
-//     HEADER
+/*-------------------------
+      HEADER
+-------------------------*/
 .header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 5rem;
-        background-color: white;
-        border-bottom: 1px solid var(--dui-base-mute);
+        background-color: $color-header;
 }
 
 .logo {
@@ -70,8 +49,8 @@ Grey dark 3: #999
 
         .input {
                 &__field {
-                        color: var(--dui-base);
-                        background-color: RGB(var(--dui-scheme-rgb));
+                        color: var(--dui-color-scheme-contrast);
+                        background-color: $color-search-box;
                         border-radius: calc(var(--dui-border-radius) * 2);
                         border: none;
                         padding: 0.3rem 1rem;
@@ -84,7 +63,8 @@ Grey dark 3: #999
                                 width: 100%;
                         }
                         &::-webkit-input-placeholder {
-                                color: var(--dui-base-mute);
+                                // prettier-ignore
+                                color: mute-contrast(--dui-color-scheme-contrast, 40%);
                         }
                 }
 
@@ -98,7 +78,7 @@ Grey dark 3: #999
                 &__icon {
                         width: 1.5rem;
                         height: 2.5rem;
-                        fill: var(--dui-base-mute);
+                        fill: mute-contrast(--dui-color-scheme-contrast, 20%);
                 }
         }
 }
@@ -115,7 +95,7 @@ Grey dark 3: #999
                 display: flex;
                 align-items: center;
                 &:hover {
-                        background-color: RGB(var(--dui-scheme-rgb));
+                        background-color: $color-search-box;
                 }
         }
 
@@ -125,15 +105,15 @@ Grey dark 3: #999
         &__icon {
                 width: 1.2rem;
                 height: 1.2rem;
-                fill: var(--dui-base-mute);
+                fill: mute-contrast(--dui-color-scheme-contrast, 30%);
         }
         &__notification {
                 font-size: 0.7rem;
                 width: 1.1rem;
                 height: 1.1rem;
                 border-radius: 50%;
-                background-color: RGB(var(--dui-primary-rgb));
-                color: var(--dui-primary-invert);
+                background-color: var(--dui-color-primary);
+                color: var(--dui-color-primary-contrast);
                 position: absolute;
                 top: 1.1rem;
                 right: 0.5rem;
@@ -147,4 +127,83 @@ Grey dark 3: #999
                 border-radius: 50%;
                 margin-right: 1.2rem;
         }
+}
+
+/*-------------------------
+      SIDEBAR
+-------------------------*/
+.content {
+        display: flex;
+        height: 100%;
+}
+
+.sidebar {
+        background-color: mute-contrast(--dui-color-scheme-contrast, 15%);
+        flex: 0 0 18%;
+        height: 50rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-top: 2rem;
+}
+
+.side-nav {
+        list-style-type: none;
+        padding-left: 0;
+
+        &__icon {
+                width: 1.5rem;
+                height: 1.5rem;
+                fill: currentColor;
+                margin-right: 1rem;
+        }
+
+        &__link:link,
+        &__link:visited {
+                text-transform: uppercase;
+                color: var(--dui-color-scheme);
+                transition: color 1s;
+                display: block;
+                padding: 1rem 2rem;
+                display: flex;
+                align-items: center;
+                z-index: 10;
+                position: relative; // z-index requires position
+        }
+
+        &__link:hover {
+                color: var(--dui-color-primary-contrast);
+        }
+
+        &__item {
+                position: relative;
+                &:not(:last-child) {
+                        margin-bottom: 0.3rem;
+                }
+                &::before {
+                        transition: transform 0.2s,
+                                width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
+                        content: "";
+                        @include abs_pos();
+                        height: 100%;
+                        width: 5px;
+                        background-color: var(--dui-color-primary);
+                        transform: scaleY(0);
+                }
+                &:hover::before {
+                        width: 100%;
+                        transform: scaleY(1);
+                }
+        }
+}
+
+.legal {
+        color: var(--dui-color-scheme);
+        text-align: center;
+        font-size: 1rem;
+}
+
+.hotel-view {
+        background-color: var(--dui-color-scheme);
+        flex-grow: 1;
 }
