--- a/css/main.css
+++ b/css/main.css
@@ -236,10 +236,10 @@
 }
 
 .side-nav__item::before {
-  -webkit-transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, -webkit-transform 0.2s;
-  transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, -webkit-transform 0.2s;
-  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
-  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, -webkit-transform 0.2s;
+  -webkit-transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
+  transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
   content: "";
   position: absolute;
   top: 0;
@@ -253,10 +253,14 @@
           transform: scaleY(0);
 }
 
-.side-nav__item:hover::before {
+.side-nav__item:hover::before, .side-nav__item--active::before {
   width: 100%;
   -webkit-transform: scaleY(1);
           transform: scaleY(1);
+}
+
+.side-nav__item:active::before {
+  background-color: hsl(var(--dui-color-primary-h), var(--dui-color-primary-s), calc(var(--dui-color-primary-l) + 3%));
 }
 
 .legal {
