--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,217 +3,216 @@
 @import "../../../dui/scss/abstracts/colors";
 
 .custom-bg::before {
-        // prettier-ignore
-        background-image: linear-gradient(to right bottom, $cpl-15, $cpd-15);
-        background-size: cover;
-        background-repeat: no-repeat;
+  // prettier-ignore
+  background-image: linear-gradient(to right bottom, $cpl-15, $cpd-15);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .content-container {
-        max-width: 70rem;
-        margin: 8rem auto; // center ver & hor
-        // background-color: $scheme;
-        box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-        min-height: 30rem;
-        border-radius: var(--dui-border-radius);
+  max-width: 70rem;
+  margin: 8rem auto; // center ver & hor
+  // background-color: $scheme;
+  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  min-height: 30rem;
+  border-radius: var(--dui-border-radius);
 }
 
 /*-------------------------
       HEADER
 -------------------------*/
 .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 5rem;
-        background-color: $cpc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  background-color: $cpc;
 }
 
 .logo {
-        height: 2.5rem;
-        margin-left: 2rem;
+  height: 2.5rem;
+  margin-left: 2rem;
 }
 
 .input-wrapper {
-        flex: 0 0 40%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+  flex: 0 0 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-        .input {
-                &__field {
-                        color: $csc;
-                        background-color: $cs;
-                        border-radius: calc(var(--dui-border-radius) * 2);
-                        border: none;
-                        padding: 0.3rem 1rem;
-                        width: 90%;
-                        height: 2.5rem;
-                        transition: all 0.2s;
-                        margin-right: -2.5rem;
-                        &:focus {
-                                outline: none;
-                                width: 100%;
-                        }
-                        &::-webkit-input-placeholder {
-                                // prettier-ignore
-                                color:$cscm-20;
-                        }
-                }
+  .input {
+    &__field {
+      color: $csc;
+      background-color: $cs;
+      border-radius: calc(var(--dui-border-radius) * 2);
+      border: none;
+      padding: 0.3rem 1rem;
+      width: 90%;
+      height: 2.5rem;
+      transition: all 0.2s;
+      margin-right: -2.5rem;
+      &:focus {
+        outline: none;
+        width: 100%;
+      }
+      &::-webkit-input-placeholder {
+        // prettier-ignore
+        color:$cscm-20;
+      }
+    }
 
-                &__btn {
-                        border: none;
-                        background-color: transparent;
-                        &:active {
-                                transform: translateY(2px);
-                        }
-                }
-                &__icon {
-                        width: 1.5rem;
-                        height: 2.5rem;
-                        fill: $cscm-20;
-                }
-        }
+    &__btn {
+      border: none;
+      background-color: transparent;
+      &:active {
+        transform: translateY(2px);
+      }
+    }
+    &__icon {
+      width: 1.5rem;
+      height: 2.5rem;
+      fill: $cscm-20;
+    }
+  }
 }
 
 .user-nav {
-        display: flex;
-        align-items: center;
-        align-self: stretch;
+  display: flex;
+  align-items: center;
+  align-self: stretch;
 
-        & > * {
-                height: 100%;
-                padding: 0 1rem;
-                cursor: pointer;
-                display: flex;
-                align-items: center;
-                &:hover {
-                        background-color: $cs;
-                }
-        }
+  & > * {
+    height: 100%;
+    padding: 0 1rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    &:hover {
+      background-color: $cs;
+    }
+  }
 
-        &__icon-box {
-                position: relative;
-        }
-        &__icon {
-                width: 1.2rem;
-                height: 1.2rem;
-                fill: $cscm-20;
-        }
-        &__notification {
-                font-size: 0.7rem;
-                width: 1.1rem;
-                height: 1.1rem;
-                border-radius: 50%;
-                background-color: $cp;
-                color: $cpc;
-                position: absolute;
-                top: 1.1rem;
-                right: 0.5rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-        }
+  &__icon-box {
+    position: relative;
+  }
+  &__icon {
+    width: 1.2rem;
+    height: 1.2rem;
+    fill: $cscm-20;
+  }
+  &__notification {
+    font-size: 0.7rem;
+    width: 1.1rem;
+    height: 1.1rem;
+    border-radius: 50%;
+    background-color: $cp;
+    color: $cpc;
+    position: absolute;
+    top: 1.1rem;
+    right: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-        &__user-photo {
-                height: 2.5rem;
-                border-radius: 50%;
-                margin-right: 1.2rem;
-        }
+  &__user-photo {
+    height: 2.5rem;
+    border-radius: 50%;
+    margin-right: 1.2rem;
+  }
 }
 
 /*-------------------------
       SIDEBAR
 -------------------------*/
 .content {
-        display: flex;
-        height: 100%;
+  display: flex;
+  height: 100%;
 }
 
 .sidebar {
-        background-color: $cscm-15;
-        flex: 0 0 18%;
-        height: 50rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding-top: 2rem;
+  background-color: $cscm-15;
+  flex: 0 0 18%;
+  height: 50rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 2rem;
 }
 
 .side-nav {
-        list-style-type: none;
-        padding-left: 0;
+  list-style-type: none;
+  padding-left: 0;
 
-        &__icon {
-                width: 1.5rem;
-                height: 1.5rem;
-                fill: currentColor;
-                margin-right: 1rem;
-        }
+  &__icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: currentColor;
+    margin-right: 1rem;
+  }
 
-        &__link:link,
-        &__link:visited {
-                text-transform: uppercase;
-                color: $cs;
-                transition: color 1s;
-                display: block;
-                padding: 1rem 2rem;
-                display: flex;
-                align-items: center;
-                z-index: 10;
-                position: relative; // z-index requires position
-        }
+  &__link:link,
+  &__link:visited {
+    text-transform: uppercase;
+    color: $cs;
+    transition: color 1s;
+    display: block;
+    padding: 1rem 2rem;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    position: relative; // z-index requires position
+  }
 
-        &__link:hover,
-        &__item--active > &__link {
-                color: $cpc;
-        }
+  &__link:hover,
+  &__item--active > &__link {
+    color: $cpc;
+  }
 
-        &__item {
-                position: relative;
-                &:not(:last-child) {
-                        margin-bottom: 0.3rem;
-                }
-                &::before {
-                        transition: transform 0.2s,
-                                width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
-                                background-color 0.1s;
-                        content: "";
-                        @include abs_pos();
-                        height: 100%;
-                        width: 5px;
-                        background-color: $cp;
-                        transform: scaleY(0);
-                }
-                &:hover::before,
-                &--active::before {
-                        width: 100%;
-                        transform: scaleY(1);
-                }
-                &:active::before {
-                        background-color: $cpl-5;
-                }
-        }
+  &__item {
+    position: relative;
+    &:not(:last-child) {
+      margin-bottom: 0.3rem;
+    }
+    &::before {
+      transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+        background-color 0.1s;
+      content: "";
+      @include abs_pos();
+      height: 100%;
+      width: 5px;
+      background-color: $cp;
+      transform: scaleY(0);
+    }
+    &:hover::before,
+    &--active::before {
+      width: 100%;
+      transform: scaleY(1);
+    }
+    &:active::before {
+      background-color: $cpl-5;
+    }
+  }
 }
 
 .legal {
-        color: $cs;
-        text-align: center;
-        font-size: 1rem;
+  color: $cs;
+  text-align: center;
+  font-size: 1rem;
 }
 
 /*-------------------------
       MAIN CONTENT
 -------------------------*/
 .hotel-view {
-        background-color: $cs;
-        flex-grow: 1;
+  background-color: $cs;
+  flex-grow: 1;
 }
 
 .gallery {
-        display: flex;
-        &__photo {
-                display: block;
-                width: 100%;
-        }
+  display: flex;
+  &__photo {
+    display: block;
+    width: 100%;
+  }
 }
