--- a/css/main.css
+++ b/css/main.css
@@ -290,4 +290,101 @@
   display: block;
   width: 100%;
 }
+
+.gallery__item {
+  margin: 0;
+}
+
+.overview {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: hsl(var(--dui-color-scheme-h), var(--dui-color-scheme-s), calc(var(--dui-color-scheme-l) + 20%));
+}
+
+.overview__heading {
+  font-size: 2rem;
+  margin: 1rem 2rem;
+  color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 30 + 30% + var(--dui-color-scheme-contrast-l))));
+  text-transform: uppercase;
+}
+
+.overview__stars {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-right: auto;
+}
+
+.overview__icon-star, .overview__icon-location {
+  width: 1.4rem;
+  height: 1.4rem;
+  fill: var(--dui-color-primary);
+}
+
+.overview__location {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.overview .btn-inline {
+  border: none;
+  background-color: transparent;
+  color: var(--dui-color-primary);
+  margin-right: 1.3rem;
+  margin-left: 0.2rem;
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 1.5px;
+  display: inline-block;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.overview .btn-inline:hover {
+  color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 15 + 15% + var(--dui-color-scheme-contrast-l))));
+  -webkit-animation: pulse;
+          animation: pulse;
+  -webkit-animation-duration: 0.8s;
+          animation-duration: 0.8s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+.overview__rating {
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+  background-color: var(--dui-color-primary);
+  color: var(--dui-color-primary-contrast);
+  padding: 0 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.overview__rating-average {
+  font-size: 1.7rem;
+  margin-bottom: -9px;
+}
+
+.overview__rating-count {
+  font-size: 1rem;
+}
 /*# sourceMappingURL=main.css.map */
