--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import "../../../dui/scss/abstracts/mixins";
-@import "../../../dui/scss/abstracts/functions";
 @import "../../../dui/scss/abstracts/colors";
+
+$shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+$shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 
 .custom-bg::before {
   // prettier-ignore
@@ -10,12 +12,12 @@
 }
 
 .content-container {
-  max-width: 70rem;
-  margin: 8rem auto; // center ver & hor
-  // background-color: $scheme;
+  max-width: 77rem;
+  margin: 4rem auto; // center ver & hor
+  background-color: $cs;
   box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  min-height: 30rem;
   border-radius: var(--dui-border-radius);
+  padding: 0;
 }
 
 /*-------------------------
@@ -133,7 +135,6 @@
 .sidebar {
   background-color: $cscm-15;
   flex: 0 0 18%;
-  height: 50rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -284,5 +285,76 @@
   }
   &__rating-count {
     font-size: 1rem;
+  }
+}
+
+.detail {
+  // font-size: 1.25rem;
+  display: flex;
+  padding: 3rem;
+}
+
+.description {
+  // background-color: aqua;
+  background-color: $csl-20;
+  flex: 0 0 60%;
+  margin-right: 3.5rem;
+  padding: 2rem;
+  box-shadow: $shadow-light;
+  border-radius: var(--dui-border-radius);
+}
+
+.paragraph {
+  font-size: inherit;
+}
+
+.user-reviews {
+  background-color: red;
+  flex-grow: 1;
+}
+
+.list {
+  list-style: none;
+  padding: 1.5rem 0;
+  border-top: 1px solid $cs;
+  border-bottom: 1px solid $cs;
+  display: flex;
+  flex-wrap: wrap;
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.4rem;
+  }
+  &__item::before {
+    content: "";
+    width: 1rem;
+    height: 1rem;
+    display: inline-block;
+    margin-right: 0.4rem;
+    // fallback for older browsers
+    // background-image: url(../img/chevron-thin-right.svg);
+    background-color: $cp;
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover;
+  }
+}
+
+.recommend {
+  font-size: inherit;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__count {
+    font-size: 1.2rem;
+    color: $cscm-30;
+    margin: 0;
+  }
+  &__photo {
+    box-sizing: content-box;
+    border-radius: 50%;
+    width: 2.8rem;
+    border: 3px solid $csl-20;
+    &:not(:last-child) {
+      margin-right: -1.2rem;
+    }
   }
 }
